# libseurat

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  rebuild.sh
cmake/: toolchain-common.cmake
cmake/builder/: build-faac.cmake  build-open-h264.cmake  build-openssl.cmake  build-rtc.cmake  build-rtmp.cmake  build-srt.cmake  build-x264.cmake  build-yuv.cmake
cmake/builder/faac/: pre_build_android.sh
cmake/builder/openssl/: pre_build_android.sh  pre_build_android_new.sh  pre_build_ios.sh
cmake/toolchain/: toolchain-android.cmake  toolchain-ios.cmake  toolchain-msvc.cmake  toolchain-osx.cmake
